--- a/Normal_DATN/src/main/resources/templates/layout/layout.html
+++ b/Normal_DATN/src/main/resources/templates/layout/layout.html
@@ -53,7 +53,7 @@
                                         <div class="col-lg-6 col-md-6">
                                             <div class="header_links">
                                                 <ul>
-                                                    <li><a href="#" title="Contact"><span th:text="#{lo.mn.contact }"></span></a></li>
+                                                    <li><a th:href="@{/ContactUs}" title="Contact"><span th:text="#{lo.mn.contact }"></span></a></li>
                                                    <li><a th:href="@{/cart}" title="My cart"><span th:text="#{lo.mn.cart }"></span></a></li>
                                                   
                                                     
@@ -273,7 +273,7 @@
                                                                     </div>
                                                                 </div>  
                                                             </li> -->
-                                                            <li><a href="contact.html"><span th:text="#{lo.mn.contact}"></span></a></li>
+                                                            <li><a href="/ContactUs"><span th:text="#{lo.mn.contact}"></span></a></li>
 
                                                         </ul>
                                                     </nav>
