--- a/Normal_DATN/src/main/resources/templates/Admin/page/ContactAd.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/ContactAd.html
@@ -14,8 +14,9 @@
             </div>
             <!-- /.box-header -->
             <!-- form start -->
+            <div th:if="${edit} == false">
             
-            <form action="/admin/contact" method="POST" th:object="${contact}">
+                  <form action="/admin/contact" method="POST" th:object="${contact}">
               <div class="box-body">
                
                 
@@ -45,8 +46,8 @@
                  <div >
                   <label for="exampleInputPassword1">Status</label><br>
                   
-                  <input th:field="*{status}" type="radio" name="role" value="false">Chờ phản hồi&ensp;
-                   <input th:field="*{status}" type="radio"name="role" value="true">Đã phản hồi
+                  <input th:field="*{status}" type="radio"  value="false">Chờ phản hồi&ensp;
+                   <input th:field="*{status}" type="radio" value="true">Đã phản hồi
                 </div> 
                 
                  
@@ -55,34 +56,35 @@
                       <i style="color:red" th:text="${tb}"></i>
                  
               <div class="box-footer">
+              <div th:if="${send} == false">
+                  <button class="btn btn-primary" disabled>Phản hồi</button>
+              </div>
               
-              
-               
-           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Phản hồi</button>
-                
+             <div th:unless="${send} == false">
+                  <button formaction="/admin/contact/writefeedback?edit=true" class="btn btn-primary">Phản hồi</button>
+              </div>
                
             </form>
+            </div>
+           <div th:unless="${edit} == false">
+              <form action="/admin/contact/feedback" method="POST">
+                 <div class="form-group">
+                  <label for="exampleInputPassword1">Tiêu đề</label><br>
+                   <i style="color:red" th:text="${subject}"></i>
+                  <input type="text" name="subject" class="form-control">
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputPassword1">Nội dung</label><br>
+                   <i style="color:red" th:text="${content}"></i>
+                  <input type="text" name="content" class="form-control">
+                </div>
+                <div class="box-footer">
+                    <button class="btn btn-primary" >Phản hồi</button>
+                </div>
+              </form>
+           </div>
             
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-				  <div class="modal-dialog">
-				    <div class="modal-content">
-				      <div class="modal-header">
-				        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-				          <span aria-hidden="true">&times;</span>
-				        </button>
-				      </div>
-				      <div class="modal-body">
-				        ...
-				      </div>
-				      <div class="modal-footer">
-				        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-				        <button type="button" class="btn btn-primary">Save changes</button>
-				      </div>
-				    </div>
-				  </div>
-				</div>
-              </div>
+                
           </div>
   		<div class="box">
             <div class="box-header">
