chưa xong update

--- a/Normal_DATN/src/main/resources/templates/Admin/page/product.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/product.html
@@ -26,12 +26,12 @@
 								<div class="form-group">
 									<label for="exampleInputPassword1">Giá của sản phẩm</label> <input
 										type="number" class="form-control" id="priceProduct"
-										placeholder="Nhập giá của sản phẩm">
+										placeholder="Nhập giá của sản phẩm (VNĐ)" min="1">
 								</div>
 								<div class="form-group">
 									<label>Danh mục sản phẩm</label> <select class="form-control"
 										id="selectedCategory">
-										
+										<option value="1">- Chọn danh mục -</option>
 									</select>
 								</div>
 								<div class="form-group">
@@ -44,7 +44,7 @@
 								<div class="form-group">
 									<label for="exampleInputPassword1">Nhập số lượng sản
 										phẩm</label> <input type="number" class="form-control"
-										id="quanlityProduct" placeholder="Nhập số lượng sản phẩm">
+										id="quanlityProduct" placeholder="Nhập số lượng sản phẩm" min ="1">
 								</div>
 
 								<div class="form-group">
