--- a/Normal_DATN/src/main/resources/templates/layout/layout.html
+++ b/Normal_DATN/src/main/resources/templates/layout/layout.html
@@ -117,8 +117,8 @@
                                         <div class="col-lg-9 col-md-9">
                                             <div class="header_right_info">
                                                 <div class="search_bar">
-                                                    <form action="#">
-                                                        <input placeholder="Search..." type="text">
+                                                    <form action="/shop/find" method="post">
+                                                        <input name="keywords" th:value="${keywords}" placeholder="Tìm kiếm..." type="text">
                                                         <button type="submit"><i class="fa fa-search"></i></button>
                                                     </form>
                                                 </div>
