--- a/Normal_DATN/src/main/resources/templates/nguoiDung/cart.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/cart.html
@@ -15,9 +15,9 @@
                                 <div class="col-12">
                                     <div class="breadcrumb_content">
                                         <ul>
-                                            <li><a href="index.html">home</a></li>
+                                            <li><a href="index.html">Trang chủ</a></li>
                                             <li><i class="fa fa-angle-right"></i></li>
-                                            <li>Shopping Cart</li>
+                                            <li>Giỏ hàng</li>
                                         </ul>
 
                                     </div>
@@ -43,12 +43,12 @@
                                                     <table>
                                                 <thead>
                                                     <tr>
-                                                        <th class="productremove">Delete</th>
-                                                        <th class="product_thumb">Image</th>
-                                                        <th class="product_name">Product</th>
-                                                        <th class="product-price">Price</th>
-                                                        <th class="product_quantity">Quantity</th>
-                                                        <th class="product_total">Total</th>
+                                                        <th class="productremove">Xóa</th>
+                                                        <th class="product_thumb">Hình</th>
+                                                        <th class="product_name">Sản phẩm</th>
+                                                        <th class="product-price">Giá</th>
+                                                        <th class="product_quantity">Số lượng</th>
+                                                        <th class="product_total">Thành tiền</th>
                                                         <th></th>
                                                         
                                                     </tr>
@@ -75,7 +75,7 @@
                                             </table>   
                                                 </div>  
                                                    <div class="cart_submit">                                              
-                                                    <button  ><a  th:href="@{/clearCart}" onclick="alert('Đã clear')">Clear cart</a></button>   
+                                                    <button  ><a  th:href="@{/clearCart}" onclick="alert('Đã clear')">Dọn dẹp giỏ hàng</a></button>   
                                                                                         
                                                   
                                                 </div>   
@@ -103,22 +103,22 @@
                                                     <h3>Cart Totals</h3>
                                                     <div class="coupon_inner">
                                                        <div class="cart_subtotal">
-                                                           <p>Subtotal</p>
+                                                           <p>Tổng giỏ hàng</p>
                                                            
                                                            <p class="cart_amount">[[${tongTien}]]</p>
                                                        </div>
                                                        <div class="cart_subtotal ">
-                                                           <p>Shipping</p>
+                                                           <p>Phí vận chuyển</p>
                                                            <p class="cart_amount"><span>Flat Rate:</span> 30000</p>
                                                        </div>
-                                                       <a href="#">Calculate shipping</a>
+                                     
 
                                                        <div class="cart_subtotal">
-                                                           <p>Total</p>
+                                                           <p>Thành tiền</p>
                                                            <p class="cart_amount">[[${tongTien}+30000]]</p>
                                                        </div>
                                                        <div class="checkout_btn">
-                                                           <a th:href="@{/checkout}">Proceed to Checkout</a>
+                                                           <a th:href="@{/checkout}">Tiến hành thanh toán</a>
                                                        </div>
                                                     </div>
                                                 </div>
