--- a/Normal_DATN/src/main/resources/templates/nguoiDung/orderHistoryDetail.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/orderHistoryDetail.html
@@ -15,9 +15,9 @@
                                 <div class="col-12">
                                     <div class="breadcrumb_content">
                                         <ul>
-                                            <li><a href="index.html">home</a></li>
+                                            <li><a href="index.html">Home</a></li>
                                             <li><i class="fa fa-angle-right"></i></li>
-                                            <li>Order History</li>
+                                            <li>Lịch sử đặt hàng</li>
                                         </ul>
 
                                     </div>
@@ -44,11 +44,11 @@
                                                     <tr>
                                                        
                                                          
-                                                        <th class="product_thumb">Image</th>
-                                                        <th class="product_name">Name</th>
-                                                        <th class="product-price">Price</th>
-                                                        <th class="product_quanlity">Quanlity</th>
-                                                        <th class="product_total">Total</th>
+                                                        <th class="product_thumb">Hình</th>
+                                                        <th class="product_name">Sản phẩm</th>
+                                                        <th class="product-price">Giá</th>
+                                                        <th class="product_quanlity">Số lượng</th>
+                                                        <th class="product_total">Thành tiền</th>
                                                     
                                                     </tr>
                                                 </thead>
