--- a/Normal_DATN/src/main/resources/templates/nguoiDung/contactUs.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/contactUs.html
@@ -15,9 +15,9 @@
                                 <div class="col-12">
                                     <div class="breadcrumb_content">
                                         <ul>
-                                            <li><a href="index.html">home</a></li>
+                                            <li><a href="/index">Trang chủ</a></li>
                                             <li><i class="fa fa-angle-right"></i></li>
-                                            <li>contact</li>
+                                            <li>Liên hệ</li>
                                         </ul>
 
                                     </div>
@@ -54,7 +54,7 @@
                                                             <textarea  th:field="*{Contents}" placeholder="Message *"  class="form-control2"></textarea>     
                                                         </div>   
                                                          <i style="color:red" th:text="${tb}"></i>
-                                                        <button type="submit"> Send Message </button>  
+                                                        <button type="submit"> Gửi </button>  
                                                     </div> 
                                                     <div class="col-12">
                                                         <p class="form-messege">
@@ -69,12 +69,12 @@
                                             <h3>contact us</h3>    
                                              <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram anteposuerit litterarum formas human.</p>
                                             <ul>
-                                                <li><i class="fa fa-fax"></i>  Address : 288 Nguyễn Văn Linh,Phường Hưng Lợi,Quận Ninh Kiều,TP Cần Thơ</li>
-                                                <li><i class="fa fa-phone"></i> <a href="#">trungttpc01815@fpt.edu.vn</a></li>
-                                                <li><i class="fa fa-envelope-o"></i>0817680523</li>
+                                                <li><i class="fa fa-fax"></i>  Địa chỉ : 288 Nguyễn Văn Linh,Phường Hưng Lợi,Quận Ninh Kiều,TP Cần Thơ</li>
+                                                <li><i class="fa fa-phone"></i> <a href="#">0817680523</a></li>
+                                                <li><i class="fa fa-envelope-o"></i>trungttpc01815@fpt.edu.vn</li>
                                             </ul>        
-                                            <h3><strong>Working hours</strong></h3>
-                                            <p><strong>Monday – Saturday</strong>:  08AM – 22PM</p>       
+                                            <h3><strong>Giờ mở cửa</strong></h3>
+                                            <p><strong>Thứ 2 - Thứ 7</strong>:  8:00AM – 22:00PM</p>       
                                         </div> 
                                    </div>
                                </div>
