--- a/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
@@ -33,8 +33,8 @@
                                              <li th:each="HoLy:${category}"  class="has-sub"><a href="#"><i class="fa fa-caret-right"></i> [[${HoLy.nameCategory}]]</a>
                                                 <ul class="categorie_sub">
                                         
-                                                    <li><a th:href="@{|/shop/${HoLy.id}?subcategory=1|}">Men</a></li>
-                                                    <li><a th:href="@{|/shop/${HoLy.id}?subcategory=2|}">Women</a></li>
+                                                    <li><a th:href="@{|/shop/${HoLy.id}?subcategory=1|}"><span th:text="#{lo.mn.men }"></span></a></li>
+                                                    <li><a th:href="@{|/shop/${HoLy.id}?subcategory=2|}"><span th:text="#{lo.mn.women }"></span></a></li>
                                                 </ul>     
                                             </li>          
 
@@ -92,7 +92,7 @@
                                     <!--new product area start-->
                                     <div class="new_product_area">
                                         <div class="block_title">
-                                            <h3>New Products</h3>
+                                            <h3>Sản phẩm mới</h3>
                                         </div>
                                         <div class="row">
                                             <div class="product_active owl-carousel">
@@ -105,7 +105,7 @@
                                                                <img src="assets\img\cart\span-new.png" alt="">
                                                            </div>
                                                            <div class="product_action">
-                                                               <a onclick="alert('Added to cart!')" th:href="@{|/addCartO/${HoLy.id}|}"> <i class="fa fa-shopping-cart"></i> Add to cart</a>
+                                                               <a onclick="alert('Đã thêm vào giỏ hàng!')" th:href="@{|/addCartO/${HoLy.id}|}"> <i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</a>
                                                            </div>
                                                       
                                                         </div>
