--- a/Normal_DATN/src/main/resources/templates/Admin/page/product.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/product.html
@@ -56,7 +56,7 @@
 									<label for="exampleInputFile">Thêm hình sản phẩm</label> <input
 										type="file" id="fileProduct">
 
-									<p class="help-block">Chỉ thêm được 1 hình</p>
+									<p class="help-block">Chỉ thêm được 1 hình, nhỏ hơn 3MB (định dạng jpg và png)</p>
 								</div>
 							</div>
 							<!-- /.box-body -->
