--- a/Normal_DATN/src/main/resources/templates/Admin/components/aside.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/components/aside.html
@@ -22,7 +22,7 @@
             <li><a th:href="@{/admin/product}"><i class="fa fa-circle-o"></i>Product Manager</a></li>
             <li><a th:href="@{/admin/category}"><i class="fa fa-circle-o"></i>Category Manager</a></li>
             <li><a th:href="@{/admin/order}"><i class="fa fa-circle-o"></i>Order Manager</a></li>
-            <li><a th:href="@{/admin/contact}"><i class="fa fa-circle-o"></i>Content Manager</a></li>
+            <li><a th:href="@{/admin/contact}"><i class="fa fa-circle-o"></i>Contact Manager</a></li>
           </ul>
         </li>
         
