--- a/Normal_DATN/src/main/resources/templates/Admin/page/ContactAd.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/ContactAd.html
@@ -92,7 +92,7 @@
               <h3 class="box-title">Hover Data Table</h3>
                <h3 style="float:right;" class="box-title">
                <form th:action="@{/admin/contact/find}" method="post">
-                  <input name="keywords" th:value="${keywords}" >
+                  <input name="keywords" th:value="${keywords}" placeholder="Search name">
                   <button>Search</button>
                </form>
               </h3>
