--- a/Normal_DATN/src/main/resources/templates/Admin/components/navbar.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/components/navbar.html
@@ -50,7 +50,7 @@
                   <a href="#" class="btn btn-default btn-flat">Profile</a>
                 </div>
                 <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                  <a href="/index" class="btn btn-default btn-flat">Sign out</a>
                 </div>
               </li>
             </ul>
