--- a/Normal_DATN/src/main/resources/templates/Admin/page/user.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/user.html
@@ -49,7 +49,7 @@
                   <label for="exampleInputPassword1">Email</label><br>
                   <i style="color:red"th:errors="*{email}"></i>
                   <i style="color:red" th:text="${ktEmail}"></i>
-                  <input th:field="*{Email}" type="text" class="form-control"  placeholder="Enter Email">
+                  <input th:field="*{Email}" type="email" class="form-control"  placeholder="Enter Email">
                 </div>
                  <div >
                   <label for="exampleInputPassword1">Role</label><br>
@@ -61,8 +61,8 @@
                  <div >
                   <label for="exampleInputPassword1">Activated</label><br>
                    <i style="color:red"th:errors="*{activated}"></i><br>
-                  <input th:field="*{activated}" type="radio" name="activated" value="false">Activate&ensp;
-                   <input th:field="*{activated}" type="radio"name="activated" value="true">Inactivate
+                  <input th:field="*{activated}" type="radio" name="activated" value="true">Activate&ensp;
+                   <input th:field="*{activated}" type="radio"name="activated" value="false">Inactivate
                 </div>
               </div>
               <!-- /.box-body -->
@@ -94,7 +94,7 @@
               <h3 class="box-title">Hover Data Table</h3>
                <h3 style="float:right;" class="box-title">
                <form th:action="@{/admin/user/find}" method="post">
-                  <input name="keywords" th:value="${keywords}" >
+                  <input name="keywords" th:value="${keywords}" placeholder="Search username">
                   <button>Search</button>
                </form>
               </h3>
@@ -132,11 +132,11 @@
                   <td class="sorting_1">[[${Users.phone}]]</td>
                   <td class="sorting_1">[[${Users.email}]]</td>
                   <div th:if="${Users.activated}==true">
-                        <td class="sorting_1"><a href="">Inactive</a></td>
+                        <td class="sorting_1">active</td>
                        
                   </div>
                   <div th:unless="${Users.activated}==true">
-                        <td class="sorting_1"><a href="">Active</a></td>
+                        <td class="sorting_1">InActive</td>
                   </div>
                   
                    <div th:if="${Users.admin}==true">
