những thứ lặt vật

--- a/Normal_DATN/src/main/resources/templates/layout/layout.html
+++ b/Normal_DATN/src/main/resources/templates/layout/layout.html
@@ -146,7 +146,7 @@
                                                                 </div> 
                                                             </li>
                                                     
-                                                            <li><a href="#"><span th:text="#{lo.mn.men }"></span></a>
+                                                            <li><a href="/shop?subcategory=1" ><span th:text="#{lo.mn.men }"></span></a>
                                                               <!--   <div class="mega_menu">
                                                                     <div class="mega_top fix">
                                                                         <div class="mega_items">
@@ -193,7 +193,7 @@
                                                                     </div>
                                                                 </div>
                                                             </li>--> 
-                                                            <li><a href="#"><span th:text="#{lo.mn.women }"></span></a>
+                                                            <li><a href="/shop?subcategory=2"><span th:text="#{lo.mn.women }"></span></a>
                                                               <!--   <div class="mega_menu">
                                                                     <div class="mega_top fix">
                                                                         <div class="mega_items">
