--- a/Normal_DATN/src/main/resources/templates/Admin/page/product.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/product.html
@@ -31,7 +31,7 @@
 								<div class="form-group">
 									<label>Danh mục sản phẩm</label> <select class="form-control"
 										id="selectedCategory">
-										<option value="1">- Chọn danh mục -</option>
+										
 									</select>
 								</div>
 								<div class="form-group">
@@ -56,7 +56,7 @@
 									<label for="exampleInputFile">Thêm hình sản phẩm</label> <input
 										type="file" id="fileProduct">
 
-									<p class="help-block">Chỉ thêm được 1 hình, nhỏ hơn 3MB (định dạng jpg và png)</p>
+									<p class="help-block">Chỉ thêm được 1 hình, nhỏ hơn 3MB (định dạng PNG)</p>
 								</div>
 							</div>
 							<!-- /.box-body -->
