--- a/Normal_DATN/src/main/resources/templates/nguoiDung/shopFind.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/shopFind.html
@@ -64,7 +64,7 @@
                                                         <div th:each="HoLy:${page.content}"  class="col-lg-4 col-md-6">
                                                             <div class="single_product">
                                                                 <div class="product_thumb">
-                                                                   <a th:href="@{|/singleProduct/${HoLy.id}|}"><img th:src="@{|/assets/img/product/${HoLy.image}|}" alt=""></a> 
+                                                                   <a th:href="@{|/singleProduct/${HoLy.id}|}"><img th:src="@{|/imgProducts/${HoLy.image}.png|}" alt=""></a> 
                                                             
                                                                    <div class="product_action">
                                                                    <a onclick="alert('Đã thêm vào giỏ hàng!')" th:href="@{|/addCartO/${HoLy.id}|}"> <i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</a>
